--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>NS4 - A P4-driven network simulator</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -75,7 +75,7 @@
                 <div class="intro-heading">NS4</div>
                 <div class="intro-lead-in">Rethink and Redefine the Network Simulator </div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
-                <a href="https://github.com/fancz2002/NS4" class="page-scroll btn btn-xl">Show Me Code</a>
+                <a href="https://github.com/ns-4/NS4" class="page-scroll btn btn-xl">Show Me Code</a>
 
             </div>
         </div>
@@ -224,7 +224,7 @@
             <div class="row">
               <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Source codes</h2>
-                 <h2 class="section-subheading text-muted"><a href="https://github.com/fancz2002/NS4"<i class="fa fa-github"></i></a></h2>
+                 <h2 class="section-subheading text-muted"><a href="https://github.com/ns-4/NS4"<i class="fa fa-github"></i></a></h2>
                   <h3 class="section-subheading text-muted">Contribution is welcome.</h3>
                 </div>
             </div>
