--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@ During demonstration, we plan to demonstrate the detailed process of simulating 
             </div>
         </div>
     </div>
+    <script>window.location.href='https://github.com/P4Simulator';</script>
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
